force-app/main/default/objects/Soft_Credit__c/Soft_Credit__c.object-meta.xml
<CustomObject>
    <label>Soft Credit</label>
    <nameField>
        <displayFormat>SC-{YYYY}{MM}-{0}</displayFormat>
        <label>Soft Credits Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Soft Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>