force-app/main/default/objects/Soft_Credit__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Soft Credits</relationshipLabel>
    <relationshipName>Soft_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>