force-app/main/default/objects/Soft_Credit__c/fields/Donated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Donated_Amount__c</fullName>
    <label>Donated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>