force-app/main/default/objects/Soft_Credit__c/fields/Matching_Amount_received__c.field-meta.xml
<CustomField>
    <fullName>Matching_Amount_received__c</fullName>
    <label>Matching Amount received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>